--- a/kr.html
+++ b/kr.html
@@ -30,8 +30,8 @@
   <link rel="stylesheet" href="stylesheets/type.css">
   <link rel="stylesheet" href="stylesheets/slider.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
-  <!--[if lt IE 9]>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;700&display=swap" rel="stylesheet">
+    <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
@@ -365,11 +365,11 @@
       <div class="image-wrapper hidden-mobile">
         <img src="images/banner_cns3.gif" width="800" alt="banner Image" />
       
-        <div style="position:absolute;top:20%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">세상에는 두 종류의 <br>게임이 있다 </div>
-        <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">유한 및 무한<br>의 게임</div>
-        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:white;"><img style="position:absolute;height:14px" id="country-flag" src="./images/wflags/un.png">♾️
+        <div style="position:absolute;top:20%;left:3.5%;font-family:'Times New Roman', 'Noto Serif KR', 'Songti KR',  serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">세상에는 두 종류의 <br>게임이 있다 </div>
+        <div style="position:absolute;bottom:22%;left:3.5%;font-family:'Times New Roman', 'Noto Serif KR', 'Songti KR', serif;font-size:24px;line-height:1.2;font-weight:bold;color:white;">유한 및 무한<br>의 게임</div>
+        <div style="position:absolute;bottom:7%;left:3.5%;font-family:'Times New Roman', 'Noto Serif KR', 'Songti KR', serif;font-size:14px;font-weight:bold;color:white;"><img style="position:absolute;height:14px" id="country-flag" src="./images/wflags/un.png">♾️
         </div>
-        <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Times New Roman', 'Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;font-size:14px;font-weight:bold;color:rgb(198,198,198);"></div>
+        <div style="position:absolute;bottom:7%;right:3.5%;font-family:'Times New Roman', 'Noto Serif KR', 'Songti KR', serif;font-size:14px;font-weight:bold;color:rgb(198,198,198);"></div>
       
         <!-- 주황색 바 -->
         <div style="position:absolute;top:50%;left:3.5%;transform:translateY(-50%);width:130px;height:3px;background-color:orange;opacity:1;border-radius:0;"></div>
