--- a/cn.html
+++ b/cn.html
@@ -655,28 +655,11 @@
         <p align="justify">
          <span class="display-mobile">欢迎来自<span class="geo-location">地球</span>的朋友 :-）</br></br></span>
 
-          目前，徐泓博士在德国工业界担任<strong>新能源动力系统</strong>专家工程师，致力于实现<strong>能源与交通</strong>领域效率提升与<strong>碳中和</strong>。攻读学位期间与跨国企业及中欧学术机构合作发表<strong>论文<span
-              class="no_of_papers"></span>余篇</strong>，并获得<strong><span
-              class="no_of_patents"></span>项专利授权</strong>。曾在<strong><a href="https://unfccc.int/"
-              target="_blank">联合国波恩气候变化大会</a></strong>主持“中国<strong>能源转型</strong>与技术创新”主题分会，多次参与<strong><a
-              href="https://unece.org/"
-              target="_blank">联合国欧洲经济委员会</a></strong>关于<strong>交通与气候专家组</strong>会议以及<strong>氢能工作小组</strong>会议讨论，积极倡导联合国可持续发展目标
-          (SDGs) 第7项 (清洁能源), 第9项 (产业创新), 以及第13项 (气候行动)。同时他还担任10余本能源与交通领域高引期刊的<strong>审稿人</strong>,
-          瑞士<strong>圣加仑国际论坛</strong>的<strong>学术评审</strong>。曾获得奥地利<strong>萨尔茨堡国际研讨会</strong>旅行奖、<strong>美国电化学学会论文邀请</strong>及旅行奖、欧盟伊拉斯谟奖学金、「挑战杯」创业全国铜奖等。
-        </p>
-
-        <p align="justify">
-          他于2021年初获得<strong><a href="https://ethz.ch/en.html" target="_blank">苏黎世联邦理工大学</a></strong>博士学位,
-          本硕博期间学术研究专注于<strong>碳中和/新能源</strong>领域，曾在<strong><a href="https://psi.ch"
-              target="_blank">瑞士保罗谢尔研究院</a></strong>、<strong><a href="https://oxfordenergy.org"
-              target="_blank">英国牛津能源研究所</a></strong>、<strong><a href="https://tum.de"
-              target="_blank">德国慕尼黑工业大学</a></strong>、<strong><a href="https://ecoledesponts.fr/en"
-              target="_blank">法国巴黎高科路桥大学</a></strong><strong>、<a href="https://xfel.eu"
-              target="_blank">欧盟自由电子激光器</a></strong>等国际机构工作/实习，同时与<strong>日本丰田汽车</strong>、<strong>德国英飞凌半导体</strong>等跨国公司开展深度研发合作。此外，他被<strong><a
-              href="https://quantic.edu/mba"
-              target="_blank">美国昆藤商学院</a></strong>全奖录取远程学习并颁发<strong>MBA</strong>学位，曾获桑坦德银行奖学金赴<strong><a
-              href="https://www.jbs.cam.ac.uk/" target="_blank">剑桥大学商学院</a></strong>学习“绿色转型”企管课程，并曾在头部证券研究所 (A股&美股)
-          撰写个股深度报告以及在双币基金 (种子轮➔A轮) 从事新能源赛道风投实践。
+         从钻木取火到电动汽车，能源定义文明进步的基石。秉承“<strong>创先-创新–创效</strong>”的理念，徐泓博士致力于<strong>能源与交通</strong>领域<strong>效能提升</strong>与<strong>碳中和</strong>，科研涵盖太阳能电池、锂电池、电解槽以及氢燃料电池。攻读学位期间与跨国企业及中欧学术机构合作发表<strong>论文<span class="no_of_papers"></span>余篇</strong> (被引<span class="google_scholar_citation"></span>余次), 申请<strong><span class="no_of_patents_sum"></span>项专利</strong> (3项已授权)。依托<strong><a href="https://psi.ch" target="_blank">瑞士光源</a></strong>和<strong><a href="https://www.tytlabs.co.jp/" target="_blank">丰田中央研究院</a></strong>合作开发的用于燃料电池健康诊断超快 (0.1秒) 高分辨 (0.4微米) X射线CT技术成果，获得瑞士联邦<strong><a href="https://psi.ch"
+          target="_blank">保罗谢尔研究院</a></strong>科研亮点推荐，并受<strong>美国电化学学会</strong>论文邀请和资助赴亚特兰大作会议报告。此外，他曾在<strong><a href="https://unfccc.int/" target="_blank">联合国波恩气候变化大会</a></strong>主持“<strong>中国能源转型</strong>与技术创新”主题分会，并多次参与<strong><a href="https://unece.org/" target="_blank">联合国欧洲经济委员会</a></strong><strong>交通与气候专家组</strong>会议以及<strong>氢能工作小组</strong>会议讨论。同时他还担任10余本能源与交通领域高引期刊的<strong>审稿人</strong>, 曾出任瑞士<strong><a href="https://symposium.org/" target="_blank">圣加仑国际经济论坛</a></strong>学术评审、<strong><a href="https://tum.de" target="_blank">德国慕尼黑工业大学</a></strong>校友导师、<strong><a href="https://oxfordenergy.org" target="_blank">英国牛津能源研究所</a></strong>访问研究员，以及<strong><a href="https://salzburgglobal.org" target="_blank">奥地利萨尔茨堡国际</a></strong>学者。
+        
+         <br><br>
+          他于2021年初获得<strong><a href="https://ethz.ch/en.html" target="_blank">苏黎世联邦理工大学</a></strong>新能源博士学位 (瑞士科学基金资助), 硕士毕业于<strong><a href="https://tum.de" target="_blank">德国慕尼黑工业大学</a></strong> (欧盟EM奖学金), 本科就读于<strong><a href="https://bjtu.edu.cn" target="_blank">北京交通大学</a></strong> (创新奖学金)，本硕博期间专注于<strong>新能源</strong>与<strong>新材料</strong>研发。曾在<strong><a href="https://xfel.eu" target="_blank">欧盟自由电子激光器</a></strong>、<strong><a href="https://ecoledesponts.fr/en" target="_blank">法国巴黎理工学院</a></strong>、<strong><a href="https://lmu.de" target="_blank">德国慕尼黑大学</a></strong></strong>等机构实习，同时与<strong>丰田汽车</strong>、<strong>英飞凌半导体</strong>、<strong>科德宝动力</strong>等跨国公司开展深度研发合作，曾负责2年瑞士-日本<strong>校企技术转移</strong>项目，以及<strong>中法合作框架</strong>下技术培训项目。科研工程之余，他被<strong><a href="https://cdi.eu" target="_blank">法国工程师学院</a></strong>MBA全奖录取<strong></strong>，曾获桑坦德银行奖学金赴<strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">剑桥大学商学院</a></strong>学习“绿色转型”企管课程，并曾在头部证券研究所 (A股/美股) 撰写个股深度报告以及在双币基金 (种子轮➔A轮) 从事新能源赛道风投实践。
         </p>
 
         <p style="text-align:left;">
