--- a/kr-research.html
+++ b/kr-research.html
@@ -30,7 +30,7 @@
   <link rel="stylesheet" href="stylesheets/type.css">
   <link rel="stylesheet" href="stylesheets/slider.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;700&display=swap" rel="stylesheet">
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -360,14 +360,14 @@
       <div class="image-wrapper hidden-mobile">
         <img src="images/banner_cns4.gif" width="800" alt="banner Image" />
         <div style="position: absolute; top: 20%; left: 3.5%; 
-        font-family: 'Times New Roman', serif; 
+        font-family: 'Times New Roman',  'Noto Serif KR', serif; 
         font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
        신에너지<br>
        풍력-태양광-수소-저장 통합           
         </div>
 
         <div style="position: absolute; bottom: 22%; left: 3.5%; 
-                font-family:'Times New Roman', serif; 
+                font-family:'Times New Roman',  'Noto Serif KR', serif; 
                 font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
         신교통        <br>
         저탄소, 스마트, 공유
