--- a/jp.html
+++ b/jp.html
@@ -610,42 +610,14 @@
       <p align="justify">
         <span class="display-mobile">ようこそ、<span class="geo-location">地球</span>
         からの友達 :-）</br></br></span>
-        現在、徐泓 (
-        <script
-          id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>歳)
-        博士は <strong>研究者</strong> および <strong>エンジニア</strong>として <strong>再生可能エネルギー</strong>と <strong>e-電力システム</strong>を
-        専門にしており、エネルギーおよび交通分野で効率性の優秀さとカーボンニュートラリティを追求しています。
-        過去10年間、彼はユーラシア大陸全体で多国籍企業および主要機関と協力し、<strong>e-モビリティ</strong>、<strong>クリーンエネルギー</strong>、および
-        <strong>新素材</strong>産業の技術革新を推進してきました。
-        <strong><span class="no_of_papers"></span> 本の論文</strong>が発表され、<strong><span class="no_of_patents"></span>
-          件の特許</strong>が付与されました。彼のエンジニアリング活動とともに、徐博士は
-        スイスのセントガレンシンポジウム、オーストリアのザルツブルグ グローバルセミナー、中国の中信証券、及びオックスフォードエネルギー研究所などの著名な
-        組織と協力して、アジアと
-        ヨーロッパの<strong>クリーンエネルギー経済および政策</strong>分析に集中してきました。国際開発に積極的に貢献し、徐博士は
-        <strong><a href="https://unece.org/" target="_blank">国連欧州経済委員会</a></strong> (UNECE) の専門家グループ (GE) 委員として
-        活動し、
-        <strong><a href="https://unfccc.int/" target="_blank">国連気候変動会議</a></strong> (UNFCCC) において並行セッションを主催し
-        <strong><a href="https://sdgs.un.org/goals" target="_blank">国連持続可能な開発目標</a></strong> (SDGs) <strong>7
-        </strong>(手頃なエネルギー)、 <strong>9 </strong>(産業革新),
-        および <strong>13 </strong>(気候行動)を擁護しました。
 
-      <p align="justify">
-        心から学者であり、<strong>再生可能エネルギー</strong>分野で<strong><a href="https://ethz.ch/en.html"
-            target="_blank">チューリッヒ工科大学</a></strong>で博士号を取得し、スイスの<strong><a href="https://psi.ch"
-            target="_blank">ポール・シェラー研究所</a></strong>と協力しました。 その前に、
-        彼は<strong><a href="https://tum.de" target="_blank">ミュンヘン工科大学</a></strong>で材料科学の修士号を取得し、<strong><a
-            href="https://xfel.eu" target="_blank">欧州X線自由電子レーザー会社</a></strong>および<strong><a href="https://infineon.com"
-            target="_blank">インフィニオン</a></strong>でインターンシップを行いました。
-        影響力のある研究に対する彼の情熱は、彼を日本の<strong>トヨタ自動車</strong>やドイツの<strong>フロイデンベルクグループ</strong>などの水素および燃料電池産業の業界
-        リーダーとの長期的な関係へと導きました。
-        学際的な視野を追求し、彼は<strong>経営学修士</strong> (MBA) を<strong><a href="https://quantic.edu/mba" target="_blank">クアンティック
-            ビジネス
-            スクール</a></strong>で取得し、
-        <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">ケンブリッジ大学ビジネススクール</a></strong>で追加の経営教育を受け、
-        中国の二重通貨ベンチャーキャピタル会社と主要証券会社で実務経験を積みました。
+        火打石から電気自動車に至るまで、エネルギーは文明の進歩を定義する基盤です。<strong>「創先-創新–創效」</strong>の理念を掲げ、徐泓 (<script id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>歳) 博士は<strong>エネルギーと交通</strong>分野における<strong>効率向上</strong>と<strong>カーボンニュートラル</strong>の実現に取り組んでおり、研究領域は太陽電池、リチウム電池、電解槽、及び水素燃料電池を含みます。学位取得期間中、国際企業および中欧の学術機関と協力し、<strong>論文<span class="no_of_papers"></span>編以上</strong>（引用<span class="google_scholar_citation"></span>回以上）を発表し、<strong><span class="no_of_patents_sum"></span>件の特許</strong>を出願（うち3件は権利取得済み）しました。<strong><a href="https://psi.ch" target="_blank">スイス光源</a></strong>と<strong><a href="https://www.tytlabs.co.jp/" target="_blank">トヨタ中央研究所</a></strong>との共同研究により開発された燃料電池健康診断用の超高速（0.1秒）高分解能（0.4マイクロメートル）X線CT技術は、スイス連邦の<strong><a href="https://psi.ch" target="_blank">パウルシェラー研究所</a></strong>により科学的ハイライトとして推薦され、<strong>米国電気化学学会</strong>に論文招待され、アトランタでの学会発表に資金支援を受けました。さらに、<strong><a href="https://unfccc.int/" target="_blank">国連ボン気候変動会議</a></strong>では「<strong>中国のエネルギー転換</strong>と技術革新」セッションを主催し、<strong><a href="https://unece.org/" target="_blank">国連欧州経済委員会</a></strong>の<strong>交通と気候専門家グループ</strong>会議や<strong>水素エネルギーワーキンググループ</strong>会議にも複数回参加しました。また、エネルギーと交通分野の高インパクトジャーナル10誌以上で<strong>査読者</strong>を務め、スイスの<strong><a href="https://symposium.org/" target="_blank">ザンクトガレン国際経済フォーラム</a></strong>学術評価者、<strong><a href="https://tum.de" target="_blank">ドイツ・ミュンヘン工科大学</a></strong>校友メンター、<strong><a href="https://oxfordenergy.org" target="_blank">英国オックスフォードエネルギー研究所</a></strong>客員研究員、及び<strong><a href="https://salzburgglobal.org" target="_blank">オーストリア・ザルツブルク国際</a></strong>学者を務めました。
+        
+        <br><br>
+         2021年初めに<strong><a href="https://ethz.ch/en.html" target="_blank">スイス連邦工科大学チューリッヒ校</a></strong> (ETH) で再生可能エネルギー博士号を取得（スイス科学基金支援）、修士は<strong><a href="https://tum.de" target="_blank">ドイツ・ミュンヘン工科大学</a></strong>（EU Erasmus賞学金）、学士は<strong><a href="https://bjtu.edu.cn" target="_blank">北京交通大学</a></strong>（イノベーション奨学金）を卒業。本学士・修士・博士期間を通じて、<strong>再生可能エネルギー</strong>および<strong>新素材</strong>の研究開発に注力しました。<strong><a href="https://xfel.eu" target="_blank">欧州自由電子レーザー</a></strong> （EuXFEL）、<strong><a href="https://ecoledesponts.fr/en" target="_blank">フランス・パリ理工学院</a></strong>、<strong><a href="https://lmu.de" target="_blank">ドイツ・ミュンヘン大学</a></strong>などでインターンを行い、<strong>トヨタ自動車</strong>、<strong>インフィニオン半導体</strong>、<strong>コードバパワー</strong>など多国籍企業との深度な研究開発協力も実施しました。さらに、2年間のスイス-日本間の<strong>大学-企業技術移転</strong>プロジェクトや、<strong>中仏協力枠組み</strong>での技術研修プロジェクトも担当しました。科研・技術開発の傍ら、<strong><a href="https://cdi.eu" target="_blank">フランス工学アカデミー</a></strong>MBA全額奨学金を受け入学、桑坦德銀行奨学金により<strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">ケンブリッジ大学ジャッジビジネススクール</a></strong>で「グリーントランスフォーメーション」経営課程を修了。さらに、中国の大手証券研究所（A株/米株）で個別銘柄の詳細レポートを作成し、複通貨ファンド（シード〜シリーズA）で再生可能エネルギー分野のベンチャー投資実務にも従事しました。
+  
       </p>
-
-
+   
       <p style="text-align:left;">
         PEK (NǐHǎo)-> CDG (Bonjour)-> HAM (MoinMoin)-> MUC (Servus)-> ZRH (Grüezi)-> ?
         </span>
