--- a/kr.html
+++ b/kr.html
@@ -548,39 +548,10 @@
       <p align="justify">
         <span class="display-mobile">환영합니다, <span id="location2">지구</span>에서 온 친구들 :-）</br></br></span>
 
-        현재, 쉬홍 (
-        <script
-          id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>세)
-        박사는 <strong>연구원</strong> 및 <strong>엔지니어</strong>로서 <strong>재생 에너지</strong>와 <strong>e-전력 시스템</strong>을
-        전문으로 하며, 에너지 및 교통 분야에서 효율성 우수성과 탄소 중립성을 추구하고 있습니다.
-        지난 10년 동안 그는 유라시아 대륙 전역에서 다국적 기업 및 주요 기관들과 협력하여 <strong>e-모빌리티</strong>, <strong>청정 에너지</strong>, 및
-        <strong>신소재</strong> 산업의 기술 발전을 이끌어왔습니다.
-        <strong><span class="no_of_papers"></span> 개의 논문</strong>이 발표되었고 <strong><span class="no_of_patents"></span>
-          개의 특허</strong>가 부여되었습니다. 그의 엔지니어링 활동과 함께, 쉬홍 박사는
-        스위스 세인트 갈렌 심포지엄, 오스트리아 잘츠부르크-한국고등교육재단 글로벌 세미나, 중국 중신증권, 및 옥스퍼드 에너지 연구소와 같은 저명한
-        조직들과 협력하여 아시아와
-        유럽의 <strong>청정 에너지 경제 및 정책</strong> 분석에 집중해왔습니다. 국제 개발에 적극적으로 기여하며, 쉬홍 박사는
-        <strong><a href="https://unece.org/" target="_blank">유엔 유럽 경제 위원회</a></strong> (UNECE) 에서 전문가 그룹 (GE) 위원으로
-        활동했으며,
-        <strong><a href="https://unfccc.int/" target="_blank">유엔 기후 변화 회의</a></strong> (UNFCCC) 에서 병행 세션을 주재하며
-        <strong><a href="https://sdgs.un.org/goals" target="_blank">유엔 지속 가능한 개발 목표</a></strong> (SDGs) <strong>7
-        </strong>(저렴한 에너지), <strong>9 </strong>(산업 혁신),
-        및 <strong>13 </strong>(기후 행동)을 옹호했습니다.
-
-      <p align="justify">
-        마음으로는 학자이고, <strong>재생 에너지</strong> 분야에서 <strong><a href="https://ethz.ch/en.html" target="_blank">취리히 연방
-            공과대학교</a></strong>에서 박사 학위를 취득하였으며, 스위스의 <strong><a href="https://psi.ch" target="_blank">폴 셔러
-            연구소</a></strong>와 협력하였습니다. 그 이전에는,
-        그는 <strong><a href="https://tum.de" target="_blank">뮌헨 공과대학교</a></strong>에서 재료 과학 석사 학위를 취득하였으며, <strong><a
-            href="https://xfel.eu" target="_blank">유럽 엑스레이 자유 전자 레이저 회사</a></strong> 및 <strong><a
-            href="https://infineon.com" target="_blank">인피니온</a></strong>에서 인턴십을 수행했습니다.
-        영향력 있는 연구에 대한 그의 열정은 그를 일본의 <strong>토요타 자동차</strong>와 독일의 <strong>프로이덴베르크 그룹</strong>과 같은 수소 및 연료 전지 산업의 산업
-        리더들과의 장기적인 관계로 이끌었습니다.
-        학제간 지평을 추구하며, 그는 <strong>경영학 석사 </strong>(MBA) 를 <strong><a href="https://quantic.edu/mba" target="_blank">퀀틱
-            비즈니스
-            스쿨</a></strong>에서 취득하였으며,
-        <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">케임브리지 대학교 경영대학원</a></strong>에서 추가적인 경영 교육을 받으며,
-        중국의 이중 통화 벤처 캐피탈 회사와 주요 증권 회사에서 실무 경험을 쌓았습니다.
+        나무를 마찰하여 불을 피우던 시절부터 전기차에 이르기까지, 에너지는 문명의 진보를 정의하는 기반입니다. <strong>‘창선-창신–창효’</strong>의 이념을 바탕으로, 서홍 (<script id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>세) 박사는 <strong>에너지 및 교통</strong> 분야에서 <strong>효율 향상</strong>과 <strong>탄소 중립</strong> 달성에 힘쓰고 있으며, 연구 분야는 태양전지, 리튬전지, 전해조, 수소연료전지를 포함합니다. 학위 과정 동안 다국적 기업 및 중유럽 학술 기관과 협력하여 <strong>논문<span class="no_of_papers"></span>편 이상</strong>(인용 <span class="google_scholar_citation"></span>회 이상)을 발표하고, <strong><span class="no_of_patents_sum"></span>건의 특허</strong>를 출원(그중 3건은 등록 완료)하였습니다. <strong><a href="https://psi.ch" target="_blank">스위스 광원</a></strong>과 <strong><a href="https://www.tytlabs.co.jp/" target="_blank">토요타 중앙연구소</a></strong>와의 공동 연구를 통해 개발된 연료전지 건강 진단용 초고속(0.1s) 고해상도(0.4µm) X선 CT 기술은, 스위스 연방 <strong><a href="https://psi.ch" target="_blank">파울 쉐러 연구소</a></strong>에서 과학적 하이라이트로 추천되었으며, <strong>미국 전기화학 학회</strong> 논문 초청을 받아 애틀랜타 학회 발표에 자금 지원을 받았습니다. 또한, <strong><a href="https://unfccc.int/" target="_blank">유엔 본 기후변화회의</a></strong>에서는 ‘<strong>중국 에너지 전환</strong>과 기술 혁신’ 주제 세션을 주최하였고, <strong><a href="https://unece.org/" target="_blank">유엔 유럽경제위원회</a></strong>의 <strong>교통 및 기후 전문가 그룹</strong> 회의와 <strong>수소 에너지 워킹그룹</strong> 회의에도 여러 차례 참여했습니다. 또한, 에너지 및 교통 분야의 고인용 학술지 10편 이상에서 <strong>심사위원</strong>을 맡았고, 스위스 <strong><a href="https://symposium.org/" target="_blank">생갈렌 국제경제포럼</a></strong> 학술평가자, <strong><a href="https://tum.de" target="_blank">독일 뮌헨 공과대학</a></strong> 동문 멘토, <strong><a href="https://oxfordenergy.org" target="_blank">영국 옥스포드 에너지 연구소</a></strong> 방문 연구원, 및 <strong><a href="https://salzburgglobal.org" target="_blank">오스트리아 잘츠부르크 국제</a></strong> 학자로 활동했습니다.
+        
+        <br><br>
+         2021년 초에 <strong><a href="https://ethz.ch/en.html" target="_blank">스위스 연방 공과대학 취리히</a></strong> (ETH) 에서 재생에너지 박사학위를 취득(스위스 과학기금 지원), 석사는 <strong><a href="https://tum.de" target="_blank">독일 뮌헨 공과대학</a></strong> (EU 에라스무스 장학금), 학사는 <strong><a href="https://bjtu.edu.cn" target="_blank">베이징 교통대학</a></strong>(혁신 장학금)을 졸업했습니다. 학사·석사·박사 기간 동안 <strong>재생에너지</strong> 및 <strong>신소재</strong> 연구개발에 집중했습니다. <strong><a href="https://xfel.eu" target="_blank">유럽 자유전자 레이저</a></strong> (EuXFEL), <strong><a href="https://ecoledesponts.fr/en" target="_blank">프랑스 파리 공과대학</a></strong>, <strong><a href="https://lmu.de" target="_blank">독일 뮌헨대학교</a></strong> 등 기관에서 인턴을 수행하였으며, <strong>토요타 자동차</strong>, <strong>인피니언 반도체</strong>, <strong>코드바 파워</strong> 등 다국적 기업과 심층 연구개발 협력을 진행했습니다. 또한, 2년간 스위스-일본 <strong>대학-기업 기술 이전</strong> 프로젝트와 <strong>중프 협력 체계</strong> 하의 기술 교육 프로젝트도 담당했습니다. 연구 및 기술 개발 외에도, <strong><a href="https://cdi.eu" target="_blank">프랑스 공학 아카데미</a></strong> MBA 전액 장학금으로 입학하였고, 산탄데르 은행 장학금을 받아 <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">케임브리지 대학 저지 경영대학원</a></strong>에서 ‘그린 트랜스포메이션’ 경영 과정을 수료했습니다. 또한 중국 주요 증권 연구소(A주/미국 주식)에서 개별 종목 심층 보고서를 작성하고, 복수통화 펀드(시드~시리즈A)에서 재생에너지 분야 벤처 투자 실무에도 참여했습니다.
       </p>
 
       <p style="text-align:left;">
