--- a/es.html
+++ b/es.html
@@ -405,9 +405,11 @@
         <div class="orange-dot red-dot" alt="Munich" style="top:31.3%;left:51.6%;z-index:9999;"></div>
       </div>
 
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 7px;"></p>
+
 
       <p class="hidden-mobile"></p>
-      <h3 class="hidden-mobile">¡Bienvenidos! <small><small> <small>Amigos de <span id="location">mundo</span>
+      <h3 class="hidden-mobile">¡Hola y bienvenidos! <small><small> <small>Amigos de <span id="location">mundo</span>
               :-)</small></small> </small>
         <span style="float:right;font-family:verdana">
           <img src="images/flag_es.png" alt="flag" style="height:23px;display:inline-block;top:7px;position:relative;">
