--- a/fr-resume.html
+++ b/fr-resume.html
@@ -360,11 +360,51 @@
       <!--<img class="hidden-mobile" src="images/banner_fr2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_fr5.gif" width="800" alt="banner Image" />
+        <img src="images/banner_cns5.gif" style="width: 100%; margin-bottom: 5px;" alt="banner Image" />
         <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
+        <div class="banner-text" style="position: absolute; top: 20%; left: 3.5%; 
+        font-family: 'Georgia', serif; 
+        font-size: 24px; line-height: 1.2; color: white;">
+Au fur et à mesure que la  <br>
+sphère du savoir s'agrandit
+
       </div>
 
-      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 5px;"></p>
+        <div class="banner-text-2" style="position: absolute; bottom: 22%; left: 3.5%; 
+                font-family:'Georgia', serif; 
+                font-size: 24px; line-height: 1.2; color: white;">
+Ainsi s'accroît le <br>
+périmètre de l’obscurité
+
+      </div>
+
+        <div style="position: absolute; bottom: 7%; left: 3.5%; 
+                font-family: 'Georgia', serif; 
+                font-size: 14px; color: white;">
+        —— Albert Einstein (1879-1955), ancien élève de l’EPFZ
+        </div>
+
+        <div style="position: absolute; bottom: 7%; right: 3.5%; 
+                font-family: 'Georgia', serif; 
+                font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
+        </div>
+
+        <!-- 橙色长条 bar -->
+        <div style="
+          position: absolute; 
+          top: 50%;        /* 垂直居中 */
+          left: 3.5%;       /* 偏左 */
+          transform: translateY(-50%); /* 保证真正居中 */
+          width: 285px;    /* 长条的长度 */
+          height: 3px;    /* 长条的高度 */
+          background-color: orange;
+          opacity: 1;    /* 半透明，可以根据需求调整 */
+          border-radius: 0px;  /* 圆角效果，可选 */
+        ">
+        </div>
+      </div>
+
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 0px;"></p>
 
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">Curriculum vitae<small><small><small></small></small> </small>
