--- a/fr.html
+++ b/fr.html
@@ -437,7 +437,7 @@
         <div class="tooltip" style="top:60%;left:70%;"><h6><img src="images/flag_de.png" alt="flag" style="height:20px;display:inline-block;top:6px;position:relative;"> Allemagne : Munich, porte des Alpes du Sud</h6></div>
         <div class="orange-dot red-dot" alt="Munich" style="top:31.3%;left:51.6%;z-index:9999;"></div>
       </div>
-
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 6px;"></p>
 
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">Bonjour! Salut! <small><small><small> Bienvenue aux amis <span id="location">du
