--- a/kr.html
+++ b/kr.html
@@ -416,6 +416,10 @@
     
       </div>
 
+
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 3px;"></p>
+
+
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile"> <span><ruby>안녕하세요！<rt><text style="color:rgb(255, 255, 255)">An nyeong ha se yo！</text>
             </rt></ruby> <ruby>
