--- a/jp-activities.html
+++ b/jp-activities.html
@@ -414,7 +414,51 @@
       <!--<img class="hidden-mobile" src="images/banner_jp2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_jp6.gif" width="800" alt="banner Image" />
+        <img src="images/banner_cns6.gif" style="width: 100%; margin-bottom: 3px;" alt="banner Image" />
+
+        <div style="position: absolute; top: 20%; left: 3.5%; 
+        font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+        font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
+         かつて剣を携えて<br>
+         天涯を巡る夢を見た
+         
+          </div>
+
+          <div style="position: absolute; bottom: 22%; left: 3.5%; 
+                 font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+                  font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
+      今はむしろ<br>
+      世界を故郷とする
+      
+          </div>
+
+          <div style="position: absolute; bottom: 7%; left: 3.5%; 
+                  font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+                  font-size: 14px; font-weight: bold; color: white;">
+         —— 許巍「 昔の君 」
+
+          </div>
+
+          <div style="position: absolute; bottom: 7%; right: 3.5%; 
+                font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+                  font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
+          スイス・マッターホルン
+
+          </div>
+
+          <!-- 橙色长条 bar -->
+          <div style="
+            position: absolute; 
+            top: 49%;        /* 垂直居中 */
+            left: 3.5%;       /* 偏左 */
+            transform: translateY(-50%); /* 保证真正居中 */
+            width: 215px;    /* 长条的长度 */
+            height: 3px;    /* 长条的高度 */
+            background-color: orange;
+            opacity: 1;    /* 半透明，可以根据需求调整 */
+            border-radius: 0px;  /* 圆角效果，可选 */
+          ">
+          </div>
         <div class="orange-dot-eth" alt="Munich" style="top: 19.3%; left: 60.6%; z-index: 9999;"></div>
       </div>
 
