--- a/kr-contact.html
+++ b/kr-contact.html
@@ -356,69 +356,51 @@
       <!--<img class="hidden-mobile" src="images/banner_kr2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_kr2.gif" width="800" alt="banner Image" />
-        <!-- <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
-        <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
-        <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
-        <div class="orange-dot" alt="Rennes" style="top: 32.3%; left: 47.2%;"></div>
-        <div class="orange-dot" alt="Zurich" style="top: 33.5%; left: 50.6%;"></div>
-        <div class="orange-dot" alt="Beijing" style="top: 43.6%; left: 90.2%;"></div>
-        <div class="orange-dot" alt="Anqing" style="top: 54.9%; left: 90.8%;"></div>
-        <div class="orange-dot" alt="DC" style="top: 44.7%; left: 19.05%;"></div>
-        <div class="orange-dot" alt="Oxford" style="top: 26.4%; left: 46.8%;"></div>
-        <div class="red-dot" alt="Munich" style="top: 31.3%; left: 51.6%; z-index: 9999;"></div>
-        <div class="tooltip" style="top:50%; left: 65%;">
-          <h6><img src="images/flag_de.png" alt="flag"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            독일 함부르크</h6>
-          <p>2015 EuXFEL 인턴십</p>
-        </div>
-        <div class="tooltip" style="top:54%; left: 41%;">
-          <h6><img src="images/flag_fr.png" alt="flag"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            프랑스 파리</h6>
-          <p>2016 ENPC 인턴십</p>
+        <img src="images/banner_cns2.gif" alt="banner Image" style="width:100%; height:auto;">
+        
+        <div style="position: absolute; top: 20%; left: 3.5%; 
+        font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+        font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
+일생<br>
+치절한 곳
+</div>
+
+<div style="position: absolute; bottom: 22%; left: 3.5%; 
+        font-family:'Times New Roman','Noto Serif SC', 'Songti SC', 'STSong', SimSun, serif;
+        font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
+꿈 없던 곳<br>
+회주에 이르지 못하다
+</div>
+
+<div style="position: absolute; bottom: 7%; left: 3.5%; 
+        font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+        font-size: 14px; font-weight: bold; color: white;">
+—— 탕현조 [명]
+</div>
+
+<div style="position: absolute; bottom: 7%; right: 3.5%; 
+        font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
+        font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
+중국 • 안후이 • 황산 홍촌 수향
+</div>
+        <!-- 橙色长条 bar -->
+        <div style="
+              position: absolute; 
+              top: 49%;        /* 垂直居中 */
+              left: 3.5%;       /* 偏左 */
+              transform: translateY(-50%); /* 保证真正居中 */
+              width: 98px;    /* 长条的长度 */
+              height: 3px;    /* 长条的高度 */
+              background-color: orange;
+              opacity: 1;    /* 半透明，可以根据需求调整 */
+              border-radius: 0px;  /* 圆角效果，可选 */
+          ">
         </div>
 
-        <div class="tooltip" style="top:60%; left: 70%;">
-          <h6><img src="images/flag_de.png" alt="flag"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            독일 뮌헨</h6>
-          <p>2015-16 TUM 및 LMU 마스터</p>
-          <p>2021-23 R&D 엔지니어</p>
-        </div>
-        <div class="tooltip" style="top:58%; left: 39%;">
-          <h6><img src="images/flag_fr.png" alt="flag"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            프랑스 렌</h6>
-          <p>2014-15 UR1 마스터</p>
-        </div>
-        <div class="tooltip" style="top:64%; left: 68%;">
-          <h6><img src="images/flag_ch.png" alt="flag"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            스위스 취리히</h6>
-          <p>2017-21 ETH 박사</p>
-          <p>2016-21 PSI 펠로우</p>
-          <p>2019-20 UZH 교환학생 </p>
-        </div>
-        <div class="tooltip" style="top:60%; left: 80%;">
-          <h6><img src="images/flag_cn.png" alt="flag"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            중국 베이징</h6>
-          <p>2009-13 BJTU 학부</p>
-        </div>
-        <div class="tooltip" style="top:80%; left: 80%;">
-          <h6><img src="images/flag_cn.png" alt="flag"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            중국 안칭</h6>
-          <p>1993-2009 고향</p>
-        </div>
-        <div class="tooltip" style="top:55%; left: 35%;">
-          <h6><img src="images/flag_us.png" alt="flag"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            미국 워싱턴 D.C.</h6>
-          <p>2019-21 QSB MBA</p>
-        </div> -->
+        <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 2px;"></p>
+
+
+   
       </div>
 
       <p class="hidden-mobile"></p>
