--- a/kr-resume.html
+++ b/kr-resume.html
@@ -373,9 +373,50 @@
       <!--<img class="hidden-mobile" src="images/banner_kr2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_kr5.gif" width="800" alt="banner Image" />
+        <div class="image-wrapper hidden-mobile ">
+          <img src="images/banner_cns5.gif" style="width: 100%; margin-bottom: 5px;" alt="banner Image" />
+          <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
+          <div style="position: absolute; top: 20%; left: 3.5%; 
+          font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+          font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
+     지식의 원이<br>
+     확장될 때
+     
+          </div>
+  
+          <div style="position: absolute; bottom: 22%; left: 3.5%; 
+                  font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+                  font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
+원의 둘레의 어둠도<br>
+함께 늘어난다
 
-        <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
+          </div>
+  
+          <div style="position: absolute; bottom: 7%; left: 3.5%; 
+                  font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+                  font-size: 14px; font-weight: bold; color: white;">
+        —— 알베르트 아인슈타인 (ETH 졸업생)
+
+          </div>
+  
+          <div style="position: absolute; bottom: 7%; right: 3.5%; 
+                  font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+                  font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
+          </div>
+  
+          <!-- 橙色长条 bar -->
+          <div style="
+            position: absolute; 
+            top: 49%;        /* 垂直居中 */
+            left: 3.5%;       /* 偏左 */
+            transform: translateY(-50%); /* 保证真正居中 */
+            width: 100px;    /* 长条的长度 */
+            height: 3px;    /* 长条的高度 */
+            background-color: orange;
+            opacity: 1;    /* 半透明，可以根据需求调整 */
+            border-radius: 0px;  /* 圆角效果，可选 */
+          ">
+          </div>
 
 
       </div>
