--- a/ar-research.html
+++ b/ar-research.html
@@ -357,9 +357,50 @@
       <!--<img class="hidden-mobile" src="images/banner_en2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_ar4.gif" width="800" alt="banner Image" />
+        <div class="image-wrapper hidden-mobile">
+          <img src="images/banner_cns4.gif" width="800" alt="banner Image" />
+          <div style="position: absolute; top: 20%; left: 3.5%; 
+          font-family: 'Georgia', serif; 
+          font-size: 24px; line-height: 1.2; color: white;">
+    الطاقة الجديدة<br>
+    الربط بين الرياح والشمس والهيدروجين
+  </div>
+  
+  <div style="position: absolute; bottom: 22%; left: 3.5%; 
+          font-family:'Georgia', serif; 
+          font-size: 24px; line-height: 1.2;  color: white;">
+    النقل الجديد<br>
+    منخفض الكربون، ذكي، مشاركة
+  </div>
+  
+          <div style="position: absolute; bottom: 7%; left: 3.5%; 
+                  font-family: 'Times New Roman', serif; 
+                  font-size: 14px; font-weight: bold; color: white;">
+          </div>
+  
+          <div style="position: absolute; bottom: 7%; right: 3.5%; 
+                  font-family: 'Times New Roman', serif; 
+                  font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
+          </div>
+  
+          <!-- 橙色长条 bar -->
+          <div style="
+            position: absolute; 
+            top: 50%;        /* 垂直居中 */
+            left: 3.5%;       /* 偏左 */
+            transform: translateY(-50%); /* 保证真正居中 */
+            width: 310px;    /* 长条的长度 */
+            height: 3px;    /* 长条的高度 */
+            background-color: orange;
+            opacity: 1;    /* 半透明，可以根据需求调整 */
+            border-radius: 0px;  /* 圆角效果，可选 */
+          ">
+          </div>
 
       </div>
+
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 5px;"></p>
+
 
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile" style="text-align: right;">التقدم البحثي<small><small><small> 「العلم بلا حدود」
