--- a/cn-contact.html
+++ b/cn-contact.html
@@ -417,7 +417,7 @@
           <div style="position: absolute; bottom: 7%; right: 3.5%; 
                      font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
                       font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
-            中國 • 安徽 • 黃山宏村
+            UNESCO / 世界文化遗产 / 中国安徽 / 西递宏村
           </div>
 
           <!-- 橙色长条 bar -->
