--- a/es-contact.html
+++ b/es-contact.html
@@ -374,7 +374,7 @@
           <div style="position: absolute; bottom: 7%; right: 3.5%; 
                   font-family: 'Georgia', serif; 
                   font-size: 14px; color: rgb(198, 198, 198);">
-          Pueblo acuático de Hongcun, Anhui, China
+          UNESCO Patrimonio Mundial / Anhui Hongcun / China
           </div>
 
           <!-- 橙色长条 bar -->
