--- a/fr-contact.html
+++ b/fr-contact.html
@@ -407,7 +407,7 @@
         <div style="position: absolute; bottom: 7%; right: 3.5%; 
                 font-family: 'Georgia', serif; 
                 font-size: 14px; color: rgb(198, 198, 198);">
-        Village aquatique de Hongcun, Anhui, Chine
+       Patrimoine mondial de l'UNESCO / Anhui Hongcun / Chine
         </div>
           <!-- 橙色长条 bar -->
           <div style="
