--- a/it-contact.html
+++ b/it-contact.html
@@ -401,7 +401,7 @@
         <div style="position: absolute; bottom: 7%; right: 3.5%; 
                 font-family: 'Georgia', serif; 
                 font-size: 14px; color: rgb(198, 198, 198);">
-       Villaggio sull'acqua di Hongcun, Anhui, Cina
+       Patrimonio mondiale dell'UNESCO / Anhui Hongcun / Cina
         </div>
 
           <!-- 橙色长条 bar -->
