--- a/jp-contact.html
+++ b/jp-contact.html
@@ -372,7 +372,7 @@
 <div style="position: absolute; bottom: 7%; right: 3.5%; 
         font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
         font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
-中国・安徽省・黄山宏村の水郷
+ユネスコ世界文化遺産・中国安徽・黄山宏村の水郷
 </div>
 
         <!-- 橙色长条 bar -->
