--- a/kr-contact.html
+++ b/kr-contact.html
@@ -381,7 +381,7 @@
 <div style="position: absolute; bottom: 7%; right: 3.5%; 
         font-family:'Times New Roman', 'Songti SC', 'STSong', SimSun, serif;
         font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
-중국 • 안후이 • 황산 홍촌 수향
+유네스코 세계문화유산·중국 안후이·황산 히로무라의 수향
 </div>
         <!-- 橙色长条 bar -->
         <div style="
