--- a/ru-resume.html
+++ b/ru-resume.html
@@ -331,8 +331,48 @@
       <!--<img class="hidden-mobile" src="images/banner_ru2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_ru5.gif" width="800" alt="banner Image" />
+        <img src="images/banner_cns5.gif" style="width: 100%; margin-bottom: 5px;" alt="banner Image" />
         <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
+        <div class="banner-text" style="position: absolute; top: 20%; left: 3.5%; 
+        font-family: 'Georgia', serif; 
+        font-size: 24px; line-height: 1.2; color: white;">
+С расширением <br>
+сферы знаний
+
+      </div>
+
+        <div class="banner-text-2" style="position: absolute; bottom: 22%; left: 3.5%; 
+                font-family:'Georgia', serif; 
+                font-size: 24px; line-height: 1.2; color: white;">
+расширяется и<br>
+окружность тьмы
+
+      </div>
+
+        <div style="position: absolute; bottom: 7%; left: 3.5%; 
+                font-family: 'Georgia', serif; 
+                font-size: 14px; color: white;">
+—— Альберт Эйнштейн (1879-1955), выпускник ETH
+</div>
+
+        <div style="position: absolute; bottom: 7%; right: 3.5%; 
+                font-family: 'Georgia', serif; 
+                font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
+        </div>
+
+        <!-- 橙色长条 bar -->
+        <div style="
+          position: absolute; 
+          top: 50%;        /* 垂直居中 */
+          left: 3.5%;       /* 偏左 */
+          transform: translateY(-50%); /* 保证真正居中 */
+          width: 165px;    /* 长条的长度 */
+          height: 3px;    /* 长条的高度 */
+          background-color: orange;
+          opacity: 1;    /* 半透明，可以根据需求调整 */
+          border-radius: 0px;  /* 圆角效果，可选 */
+        ">
+        </div>
       </div>
 
       <p class="hidden-mobile"></p>
