--- a/ru.html
+++ b/ru.html
@@ -433,6 +433,9 @@
         <div class="orange-dot red-dot" alt="Munich" style="top:31.3%;left:51.6%;z-index:9999;"></div>
       </div>
 
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 5px;"></p>
+
+
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">Привет! <small><small><small>Добро пожаловать, друзья из <span id="location">всего
                 мира</span>
