--- a/ar-resume.html
+++ b/ar-resume.html
@@ -359,8 +359,45 @@
       <!--<img class="hidden-mobile" src="images/banner_en2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_ar5.gif" width="800" alt="banner Image" />
+        <img src="images/banner_cns5.gif" style="width: 100%; margin-bottom: 5px;" alt="banner Image" />
         <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
+        <div class="banner-text" style="position: absolute; top: 20%; left: 3.5%; 
+        font-family: 'Georgia', serif; 
+        font-size: 24px; line-height: 1.2; color: white;">
+  كلما توسعت دائرة<br>
+  المعرفة
+</div>
+
+<div class="banner-text-2" style="position: absolute; bottom: 22%; left: 3.5%; 
+        font-family:'Georgia', serif; 
+        font-size: 24px; line-height: 1.2; color: white;">
+  كذلك توسع<br>
+  محيط الظلام
+</div>
+
+<div style="position: absolute; bottom: 7%; left: 3.5%; 
+        font-family: 'Georgia', serif; 
+        font-size: 14px; color: white;">
+ألبرت أينشتاين (١٨٧٩-١٩٥٥) — خريج المعهد الفدرالي السويسري للتكنولوجيا في زيورخ</div>
+
+        <div style="position: absolute; bottom: 7%; right: 3.5%; 
+                font-family: 'Georgia', serif; 
+                font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
+        </div>
+
+        <!-- 橙色长条 bar -->
+        <div style="
+          position: absolute; 
+          top: 50%;        /* 垂直居中 */
+          left: 3.5%;       /* 偏左 */
+          transform: translateY(-50%); /* 保证真正居中 */
+          width: 95px;    /* 长条的长度 */
+          height: 3px;    /* 长条的高度 */
+          background-color: orange;
+          opacity: 1;    /* 半透明，可以根据需求调整 */
+          border-radius: 0px;  /* 圆角效果，可选 */
+        ">
+        </div>
 
       </div>
 
