--- a/de-contact.html
+++ b/de-contact.html
@@ -371,7 +371,7 @@
         <div style="position: absolute; bottom: 7%; right: 3.5%; 
                           font-family: 'Georgia', serif; 
                           font-size: 14px; color: rgb(198, 198, 198);">
-         Wasserdorf Hongcun, Anhui, China
+         UNESCO-Welterbe / Anhui Hongcun / China
         </div>
         
         <!-- Orangener Balken -->
