--- a/en-contact.html
+++ b/en-contact.html
@@ -346,7 +346,7 @@
           <div style="position: absolute; bottom: 7%; right: 3.5%; 
                   font-family: 'Georgia', serif; 
                   font-size: 14px; color: rgb(198, 198, 198);">
-          Hongcun Town, Anhui, China
+          UNESCO World Heritage / Anhui Hongcun / China
           </div>
 
           <!-- 橙色长条 bar -->
