--- a/ru-activities.html
+++ b/ru-activities.html
@@ -332,7 +332,50 @@
       <!--<img class="hidden-mobile" src="images/banner_ru2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_ru6.gif" width="800" alt="banner Image" />
+        <img src="images/banner_cns6.gif" style="width: 100%; margin-bottom: 3px;" alt="banner Image" />
+
+        <div style="position: absolute; top: 20%; left: 3.5%; 
+        font-family: 'Georgia', serif; 
+        font-size: 24px; line-height: 1.2;  color: white;">
+ Живите нашу жизнь <br>
+ без оправданий
+ 
+        </div>
+
+          <div style="position: absolute; bottom: 22%; left: 3.5%; 
+                  font-family:'Georgia', serif; 
+                  font-size: 24px; line-height: 1.2;  color: white;">
+ Путешествуйте по миру <br>
+ без сожалений
+ 
+          </div>
+
+          <div style="position: absolute; bottom: 7%; left: 3.5%; 
+                  font-family: 'Georgia', serif; 
+                  font-size: 14px; color: white;">
+          —— Оскар Уайльд (1854-1900 г.)
+
+          </div>
+
+          <div style="position: absolute; bottom: 7%; right: 3.5%; 
+                  font-family: 'Georgia', serif; 
+                  font-size: 14px; color: rgb(198, 198, 198);">
+Швейцарский Маттерхорн
+</div>
+
+          <!-- 橙色长条 bar -->
+          <div style="
+            position: absolute; 
+            top: 50%;        /* 垂直居中 */
+            left: 3.5%;       /* 偏左 */
+            transform: translateY(-50%); /* 保证真正居中 */
+            width: 120px;    /* 长条的长度 */
+            height: 3px;    /* 长条的高度 */
+            background-color: orange;
+            opacity: 1;    /* 半透明，可以根据需求调整 */
+            border-radius: 0px;  /* 圆角效果，可选 */
+          ">
+          </div>
         <div class="orange-dot-eth" alt="Munich" style="top: 19.3%; left: 60.6%; z-index: 9999;"></div>
       </div>
 
