--- a/ru-contact.html
+++ b/ru-contact.html
@@ -353,66 +353,48 @@
       <!--<img class="hidden-mobile" src="images/banner_ru2.png" width="800" />-->
 
       <div class="image-wrapper hidden-mobile">
-        <img src="images/banner_ru2.gif" width="800" alt="banner Image" />
-        <!-- <div class="orange-dot" alt="Hamburg" style="top: 23.1%; left: 50.9%;"></div>
-        <div class="orange-dot" alt="Paris" style="top: 29.5%; left: 48.4%;"></div>
-        <div class="orange-dot" alt="Munich" style="top: 31.3%; left: 51.6%;"></div>
-        <div class="orange-dot" alt="Rennes" style="top: 32.3%; left: 47.2%;"></div>
-        <div class="orange-dot" alt="Zurich" style="top: 33.5%; left: 50.6%;"></div>
-        <div class="orange-dot" alt="Beijing" style="top: 43.6%; left: 90.2%;"></div>
-        <div class="orange-dot" alt="Anqing" style="top: 54.9%; left: 90.8%;"></div>
-        <div class="orange-dot" alt="DC" style="top: 44.9%; left: 18%;"></div> 
-        <div class="red-dot" alt="Oxford" style="top: 26.7%; left: 46.7%;"></div>
-        <div class="tooltip" style="top:50%; left: 65%;">
-          <h6><img src="images/flag_de.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Гамбург, Германия</h6>
-          <p>Стажировка EuXFEL 2015</p>
-        </div>
-        <div class="tooltip" style="top:54%; left:41%;">
-          <h6><img src="images/flag_fr.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Париж, Франция</h6>
-          <p>Стажировка ENPC 2015</p>
-        </div>
-        <div class="tooltip" style="top:60%; left: 70%;">
-          <h6><img src="images/flag_de.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Мюнхен, Германия</h6>
-          <p>2015-16 MSc ТУМ и ЛМУ</p>
-          <p>2021–23 Инженер НИОКР</p>
-        </div>
-        <div class="tooltip" style="top:58%; left: 39%;">
-          <h6><img src="images/flag_fr.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Ренн, Франция</h6>
-          <p>2014-15 MSc UR1</p>
-        </div>
-        <div class="tooltip" style="top:64%; left:68%;">
-          <h6><img src="images/flag_ch.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Цюрих, Швейцария</h6>
-          <p>2017-21 кандидат наук ETH</p>
-          <p>2016-21 Исследователь PSI</p>
-        </div>
-        <div class="tooltip" style="top:60%; left: 80%;">
-          <h6><img src="images/flag_cn.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Пекин, Китай</h6>
-          <p>2009-13 BSc BJTU</p>
-        </div>
-        <div class="tooltip" style="top:80%; left: 80%;">
-          <h6><img src="images/flag_cn.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Аньцин, Китай</h6>
-          <p>1993–2009 Родной город</p>
-        </div>
-        <div class="tooltip" style="top:55%; left: 37%;">
-          <h6><img src="images/flag_us.png" alt="Flagge"
-              style="height:20px;display:inline-block;top:6px;position:relative;">
-            Вашингтон, США</h6>
-          <p>2019-21 QSB MBA</p>
-        </div>-->
+        <img src="images/banner_cns2.gif" style="width: 100%; margin-bottom: 3px;" alt="banner Image" />
+
+        <div style="position: absolute; top: 20%; left: 3.5%; 
+        font-family: 'Georgia', serif; 
+        font-size: 24px; line-height: 1.2;  color: white;">
+Всю жизнь  <br>
+я тоскую
+
+</div>
+
+<div style="position: absolute; bottom: 22%; left: 3.5%; 
+        font-family:'Georgia', serif; 
+        font-size: 24px; line-height: 1.2;  color: white;">
+ А всё же<br> 
+ снится Аньхуэй
+</div>
+
+<div style="position: absolute; bottom: 7%; left: 3.5%; 
+        font-family: 'Georgia', serif; 
+        font-size: 14px; color: white;">
+  —— Тан Сянцзу (1550-1616 г.)
+</div>
+
+<div style="position: absolute; bottom: 7%; right: 3.5%; 
+        font-family: 'Georgia', serif; 
+        font-size: 14px; color: rgb(198, 198, 198);">
+  Всемирное наследие ЮНЕСКО / Аньхой Хунцунь / Китай
+</div>
+
+          <!-- 橙色长条 bar -->
+          <div style="
+            position: absolute; 
+            top: 50%;        /* 垂直居中 */
+            left: 3.5%;       /* 偏左 */
+            transform: translateY(-50%); /* 保证真正居中 */
+            width: 105px;    /* 长条的长度 */
+            height: 3px;    /* 长条的高度 */
+            background-color: orange;
+            opacity: 1;    /* 半透明，可以根据需求调整 */
+            border-radius: 0px;  /* 圆角效果，可选 */
+          ">
+          </div>
       </div>
 
       <p class="hidden-mobile"></p>
